src/ImguiSdlSharp.Native/cimgui.h


typedef struct ImVec2_t ImVec2;
typedef struct ImVec4_t ImVec4;
typedef struct ImVector_ImWchar_t ImVector_ImWchar;
typedef struct ImVector_float_t ImVector_float;
typedef struct ImVector_ImFontGlyph_t ImVector_ImFontGlyph;
typedef struct ImFont_t ImFont;                                          
typedef struct ImFontAtlas_t ImFontAtlas;                                
typedef struct ImFontConfig_t ImFontConfig;                              
typedef struct ImFontGlyph_t ImFontGlyph;                                
typedef int ImGuiCol;            
typedef int ImGuiStyleVar;       
typedef unsigned int ImGuiID;      
typedef unsigned char ImU8;        
typedef unsigned int ImU32;        
typedef ImWchar32 ImWchar;
typedef ImWchar16 ImWchar;
IM_MSVC_RUNTIME_CHECKS_OFF
typedef struct ImVec2_t
{
    float x, y;
} ImVec2;
typedef struct ImVec4_t
{
    float x, y, z, w;
} ImVec4;
CIMGUI_API float ImGui_GetScrollMaxY(void);                                                  
CIMGUI_API void  ImGui_SetScrollHereX(float center_x_ratio );                    
CIMGUI_API void  ImGui_SetScrollHereY(float center_y_ratio );                    
CIMGUI_API void  ImGui_SetScrollFromPosX(float local_x, float center_x_ratio );  
CIMGUI_API void  ImGui_SetScrollFromPosY(float local_y, float center_y_ratio );  
CIMGUI_API void ImGui_PushFont(ImFont* font);                             
CIMGUI_API void ImGui_PopFont(void);
CIMGUI_API void ImGui_PushStyleColor(ImGuiCol idx, ImU32 col);            
CIMGUI_API void ImGui_PushStyleColorImVec4(ImGuiCol idx, ImVec4 col);
CIMGUI_API void ImGui_PopStyleColor(void);                                
CIMGUI_API void ImGui_PopStyleColorEx(int count );
CIMGUI_API void ImGui_PushStyleVar(ImGuiStyleVar idx, float val);         
CIMGUI_API void ImGui_PushStyleVarImVec2(ImGuiStyleVar idx, ImVec2 val);  
CIMGUI_API void ImGui_PopStyleVar(void);                                  
CIMGUI_API void ImGui_PopStyleVarEx(int count );
CIMGUI_API void ImGui_PushAllowKeyboardFocus(bool allow_keyboard_focus);  
CIMGUI_API void ImGui_PopAllowKeyboardFocus(void);
CIMGUI_API void ImGui_PushButtonRepeat(bool repeat);                      
CIMGUI_API void ImGui_PopButtonRepeat(void);
CIMGUI_API void  ImGui_PushItemWidth(float item_width);                       
CIMGUI_API void  ImGui_PopItemWidth(void);
CIMGUI_API void  ImGui_SetNextItemWidth(float item_width);                    
CIMGUI_API float ImGui_CalcItemWidth(void);                                   
CIMGUI_API void  ImGui_PushTextWrapPos(float wrap_local_pos_x );  
CIMGUI_API void  ImGui_PopTextWrapPos(void);
CIMGUI_API ImFont*       ImGui_GetFont(void);                                              
CIMGUI_API float         ImGui_GetFontSize(void);                                          
CIMGUI_API ImVec2        ImGui_GetFontTexUvWhitePixel(void);                               
CIMGUI_API ImU32         ImGui_GetColorU32(ImGuiCol idx);                                  
CIMGUI_API ImU32         ImGui_GetColorU32Ex(ImGuiCol idx, float alpha_mul );  
CIMGUI_API ImU32         ImGui_GetColorU32ImVec4(ImVec4 col);                              
CIMGUI_API const ImVec4* ImGui_GetStyleColorVec4(ImGuiCol idx);                            
CIMGUI_API void   ImGui_Separator(void);                          
CIMGUI_API void   ImGui_SameLine(void);                           
CIMGUI_API void   ImGui_SameLineEx(float offset_from_start_x , float spacing ); 
CIMGUI_API void   ImGui_NewLine(void);                            
CIMGUI_API void   ImGui_Spacing(void);                            
CIMGUI_API void   ImGui_Dummy(ImVec2 size);                       
CIMGUI_API void   ImGui_Indent(void);                             
CIMGUI_API void   ImGui_IndentEx(float indent_w );    
CIMGUI_API void   ImGui_Unindent(void);                           
CIMGUI_API void   ImGui_UnindentEx(float indent_w );  
CIMGUI_API void   ImGui_BeginGroup(void);                         
CIMGUI_API void   ImGui_EndGroup(void);                           
CIMGUI_API ImVec2 ImGui_GetCursorPos(void);                       
CIMGUI_API float  ImGui_GetCursorPosX(void);                      
CIMGUI_API float  ImGui_GetCursorPosY(void);                      
CIMGUI_API void   ImGui_SetCursorPos(ImVec2 local_pos);           
CIMGUI_API void   ImGui_SetCursorPosX(float local_x);             
CIMGUI_API void   ImGui_SetCursorPosY(float local_y);             
CIMGUI_API ImVec2 ImGui_GetCursorStartPos(void);                  
CIMGUI_API ImVec2 ImGui_GetCursorScreenPos(void);                 
CIMGUI_API void   ImGui_SetCursorScreenPos(ImVec2 pos);           
CIMGUI_API void   ImGui_AlignTextToFramePadding(void);            
CIMGUI_API float  ImGui_GetTextLineHeight(void);                  
CIMGUI_API float  ImGui_GetTextLineHeightWithSpacing(void);       
CIMGUI_API float  ImGui_GetFrameHeight(void);                     
CIMGUI_API float  ImGui_GetFrameHeightWithSpacing(void);          
CIMGUI_API void    ImGui_PushID(const char* str_id);                                   
CIMGUI_API void    ImGui_PushIDStr(const char* str_id_begin, const char* str_id_end);  
CIMGUI_API void    ImGui_PushIDPtr(const void* ptr_id);                                
CIMGUI_API void    ImGui_PushIDInt(int int_id);                                        
CIMGUI_API void    ImGui_PopID(void);                                                  
CIMGUI_API ImGuiID ImGui_GetID(const char* str_id);                                    
CIMGUI_API ImGuiID ImGui_GetIDStr(const char* str_id_begin, const char* str_id_end);
CIMGUI_API ImGuiID ImGui_GetIDPtr(const void* ptr_id);
CIMGUI_API void ImGui_TextUnformatted(const char* text);                                           
CIMGUI_API void ImGui_TextUnformattedEx(const char* text, const char* text_end );      
CIMGUI_API void ImGui_Text(const char* fmt, ...) IM_FMTARGS(1);                                    
CIMGUI_API void ImGui_TextV(const char* fmt, va_list args) IM_FMTLIST(1);
CIMGUI_API void ImGui_TextColored(ImVec4 col, const char* fmt, ...) IM_FMTARGS(2);                 
CIMGUI_API void ImGui_TextColoredV(ImVec4 col, const char* fmt, va_list args) IM_FMTLIST(2);
CIMGUI_API void ImGui_TextDisabled(const char* fmt, ...) IM_FMTARGS(1);                            
CIMGUI_API void ImGui_TextDisabledV(const char* fmt, va_list args) IM_FMTLIST(1);
CIMGUI_API void ImGui_TextWrapped(const char* fmt, ...) IM_FMTARGS(1);                             
CIMGUI_API void ImGui_TextWrappedV(const char* fmt, va_list args) IM_FMTLIST(1);
CIMGUI_API bool ImGui_ComboCallback(const char* label, int* current_item, bool (*items_getter)(void* data, int idx, const char** out_text), void* data, int items_count);  
CIMGUI_API bool ImGui_ComboCallbackEx(const char* label, int* current_item, bool (*items_getter)(void* data, int idx, const char** out_text), void* data, int items_count, int popup_max_height_in_items );
CIMGUI_API bool ImGui_ListBoxCallback(const char* label, int* current_item, bool (*items_getter)(void* data, int idx, const char** out_text), void* data, int items_count); 
CIMGUI_API bool ImGui_ListBoxCallbackEx(const char* label, int* current_item, bool (*items_getter)(void* data, int idx, const char** out_text), void* data, int items_count, int height_in_items );
CIMGUI_API void ImGui_PlotLinesCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count);      
CIMGUI_API void ImGui_PlotLinesCallbackEx(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size );
CIMGUI_API void ImGui_PlotHistogramCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count);  
CIMGUI_API void ImGui_PlotHistogramCallbackEx(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size );
typedef struct ImVector_float_t
{
    int    Size;
    int    Capacity;
    float* Data;
} ImVector_float;
typedef struct ImVector_ImFontGlyph_t
{
    int          Size;
    int          Capacity;
    ImFontGlyph* Data;
} ImVector_ImFontGlyph;
typedef struct ImFontConfig_t
{
    void*          FontData;              
    int            FontDataSize;          
    bool           FontDataOwnedByAtlas;  
    int            FontNo;                
    float          SizePixels;            
    int            OversampleH;           
    int            OversampleV;           
    bool           PixelSnapH;            
    ImVec2         GlyphExtraSpacing;     
    ImVec2         GlyphOffset;           
    const ImWchar* GlyphRanges;           
    float          GlyphMinAdvanceX;      
    float          GlyphMaxAdvanceX;      
    bool           MergeMode;             
    unsigned int   FontBuilderFlags;      
    float          RasterizerMultiply;    
    ImWchar        EllipsisChar;          
    char           Name[40];              
    ImFont*        DstFont;
} ImFontConfig;
typedef struct ImFontGlyph_t
{
    unsigned int Colored : 1;     
    unsigned int Visible : 1;     
    unsigned int Codepoint : 30;  
    float        AdvanceX;        
    float        X0, Y0, X1, Y1;  
    float        U0, V0, U1, V1;  
} ImFontGlyph;
typedef struct ImFontAtlas_t
{
    ImFontAtlasFlags       Flags;                                          
    ImTextureID            TexID;                                          
    int                    TexDesiredWidth;                                
    int                    TexGlyphPadding;                                
    bool                   Locked;                                         
    void*                  UserData;                                       
    bool                   TexReady;                                       
    bool                   TexPixelsUseColors;                             
    unsigned char*         TexPixelsAlpha8;                                
    unsigned int*          TexPixelsRGBA32;                                
    int                    TexWidth;                                       
    int                    TexHeight;                                      
    ImVec2                 TexUvScale;                                     
    ImVec2                 TexUvWhitePixel;                                
    ImVector_ImFontPtr     Fonts;                                          
    ImVector_ImFontAtlasCustomRect CustomRects;                            
    ImVector_ImFontConfig  ConfigData;                                     
    ImVec4                 TexUvLines[IM_DRAWLIST_TEX_LINES_WIDTH_MAX+1];  
    const ImFontBuilderIO* FontBuilderIO;                                  
    unsigned int           FontBuilderFlags;                               
    int                    PackIdMouseCursors;                             
    int                    PackIdLines;                                    
} ImFontAtlas;
typedef struct ImFont_t
{
    ImVector_float       IndexAdvanceX;                                         
    float                FallbackAdvanceX;                                      
    float                FontSize;                                              
    ImVector_ImWchar     IndexLookup;                                           
    ImVector_ImFontGlyph Glyphs;                                                
    const ImFontGlyph*   FallbackGlyph;                                         
    ImFontAtlas*         ContainerAtlas;                                        
    const ImFontConfig*  ConfigData;                                            
    short                ConfigDataCount;                                       
    ImWchar              FallbackChar;                                          
    ImWchar              EllipsisChar;                                          
    ImWchar              DotChar;                                               
    bool                 DirtyLookupTables;                                     
    float                Scale;                                                 
    float                Ascent, Descent;                                       
    int                  MetricsTotalSurface;                                   
    ImU8                 Used4kPagesMap[(IM_UNICODE_CODEPOINT_MAX +1)/4096/8];  
} ImFont;